# mipt_formal_algos

./: CMakeLists.txt  README.md  main.cpp
libs/: earley.hpp  exceptions.hpp  grammar.hpp  rule.hpp
src/: CMakeLists.txt  earley.cpp  grammar.cpp  rule.cpp
tests/: tests.cpp
